# rabbitui

./: CHANGELOG.md  Cargo.toml  EMBRYO.md  LICENSE  README.md  cliff.toml  docker-compose.yml
src/: app.rs  cli.rs  client.rs  main.rs  models.rs  ui.rs  views.rs  widgets.rs
src/client/: client.rs
src/views/: queues.rs
src/widgets/: testing_chart.rs
