[package]
name = "rabbitui"
version = "0.1.0"
authors = ["Max Mindlin <maxmindlin@gmail.com>", "Coding Kelps <contact@kelps.org>"]
autotests = false
categories = ["database", "visualization"]
description = "A terminal client for the RabbitMQ Management API"
edition = "2021"
exclude = []
homepage = "https://github.com/coding-kelps/rabbitui"
keywords = ["tui", "rabbitmq"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/coding-kelps/rabbitui"
rust-version = "1.87"

[dependencies]
reqwest = { version = "0.12.20", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
clipboard = "0.5.0"
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
